# vlyWallet_myLocalRepo

./: .gitignore  .replit  :wq  README.md  app.py  branch_protection.py  coverage.xml  database.py  git_automation.py  git_sync.sh  models.py  pyproject.toml  pytest.ini  requirements.txt  scheduler.py  update_transactions.py  views.py  vly_api.py  vly_wallet_api.py
.github/: CODEOWNERS
.github/workflows/: deploy.yml
static/css/: custom.css
static/js/: charts.js  leaderboard.js
templates/: admin_login.html  admin_profile.html  base.html  index.html  leaderboard.html  register.html  transaction_history.html  transaction_history_search.html
tests/: test_app.py  test_models.py
translations/ja/LC_MESSAGES/: messages.mo  messages.po
